scrollbar issue resolved

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,13 @@
 
 /* * * * * * Personal Stylesheet * * * * * */
-
+.preload * {
+    transition: none;
+}
 
 body {
     background-image: url('https://images.pexels.com/photos/1020320/pexels-photo-1020320.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260');  
     background-size: 100%;
+    overflow: auto;
 }
 
 
@@ -164,7 +167,6 @@ input[type=submit]:hover {
 
 /* Footer */
 footer {
-    width: 100%;
     background-color: #333;
     border-top: 5px solid #4aaaa5;
     box-shadow: 0px -10px 25px rgba(51,51,51,0.8);
@@ -202,6 +204,7 @@ body {
 .footer {
     flex-shrink: 0;
     padding: 0.75em;
+    box-sizing: border-box;
 }
 
 .navbar-toggler {
